Multiple equations now supported. Options panel repurposed for the system of equations rather than easy/hard and edit/solve options. These can still be reached by holding shift while clicking options button.

--- a/ScienceGadgets/war/CSStyles/ScienceGadgets.css
+++ b/ScienceGadgets/war/CSStyles/ScienceGadgets.css
@@ -20,7 +20,7 @@ body {
     -ms-user-select: none;
     user-select: none;
     
-	font-family: sans-serif;
+	font-family: math;
 /* 	background-image: url('images/chalkboard.jpeg'); */
 	background-color: #101010;
 /* 	box-shadow:0 0 30px black inset; */
@@ -291,9 +291,9 @@ body {
 }
 
 .sg-eqLayer {
-	height: 90%;
+	height: 100%;
 	width: 90%;
-	margin: 5%;
+	margin: 0 5%;
 /* 	text-align: center; */
 /* 	padding-top: 10px; */
 	white-space: nowrap;
